gccida/g2/expand_increment
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9449:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9458:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9573:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9574:33: error: use of undeclared identifier 'machine_mode'
v24 = operand->predicate( v8, ( machine_mode)v6); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9578:35: error: use of undeclared identifier 'machine_mode'
v25 = operand[1].predicate( v8, ( machine_mode)v6); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9582:40: error: use of undeclared identifier 'machine_mode'
if ( !operand[2].predicate( ignoreb, ( machine_mode)v6) ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9583:14: error: use of undeclared identifier 'machine_mode'
force_reg( ( machine_mode)v6, ignoreb); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9584:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v26 = insn_data_0[insn_code].genfun( v8, v8); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9584:36: error: called object type '<dependent type>' is not a function or function pointer
v26 = insn_data_0[insn_code].genfun( v8, v8); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9587:14: error: expected identifier or '('
 struct expr = cfun->expr; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9596:41: error: use of undeclared identifier 'machine_mode'
if ( general_operand( v8->fld[0].rtx, ( machine_mode)v6) ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9597:20: error: use of undeclared identifier 'machine_mode'
v33 = force_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v8->fld[0].rtx); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9601:19: error: use of undeclared identifier 'machine_mode'
v8 = force_reg( ( machine_mode)*( ( unsigned __int8 *)v34 + 2), v34); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9602:40: error: use of undeclared identifier 'machine_mode'
if ( !operand[2].predicate( ignorec, ( machine_mode)v6) ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9603:14: error: use of undeclared identifier 'machine_mode'
force_reg( ( machine_mode)v6, ignorec); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9608:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v34 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9614:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v37 = insn_data_0[insn_code].genfun( v8, v8); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9614:36: error: called object type '<dependent type>' is not a function or function pointer
v37 = insn_data_0[insn_code].genfun( v8, v8); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/expr.c:9617:14: error: expected identifier or '('
 struct expr = cfun->expr; 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_increment/src/obj/expr.o] Error 1
